# NLPF-StockExchange

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  main.rs  package-lock.json
hello-world-app/: Cargo.toml
hello-world-app/src/: main.rs
src/: main.rs
src/controllers/: offers.rs
src/models/: bid.rs  lot.rs  mod.rs  tractor.rs
src/routes/: mod.rs  offers.rs
