[package]
name = "nlpf-StockExchange"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
mongodb = { version = "2.8.2", default-features = false, features = ["tokio-runtime"] }
tokio = { version = "1", features = ["full"] }
bson = "2.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"